--- a/components/NavbarLeft/NavbarLeft.module.scss
+++ b/components/NavbarLeft/NavbarLeft.module.scss
@@ -43,7 +43,9 @@
   border-left: 2px solid var(--primaryColor100);
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
-
+  a {
+    text-decoration: none;
+  }
   button {
     min-width: 150px;
     &:hover {
